--- a/flowcats/src/main/res/values/strings.xml
+++ b/flowcats/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Flow cats</string>
+    <string name="error">Error!!</string>
+    <string name="loading">Please wait</string>
 </resources>
